Update Django code to work with prior optimization
Since the input to getPossibleSteals changed a bit, this commit changes
some code in views.py to maintain a global dict.

--- a/socialnetwork/templates/socialnetwork/home.html
+++ b/socialnetwork/templates/socialnetwork/home.html
@@ -9,7 +9,7 @@
 
     <body>
         <h3 class='text-center'>
-            Word: {{ og_word }}, Letters: {{ letters }}
+            Word: {{ og_word }}
             <br>
             {% for w in words %}
                 {{ w }}
