--- a/solver_app/templates/solver_app/home.html
+++ b/solver_app/templates/solver_app/home.html
@@ -8,14 +8,26 @@
     </head>
 
     <body>
-        <h3 class='text-center'>
-            Word: {{ og_word }}
-            <br>
-            {% for w in words %}
-                {{ w }}
-                </br>
-            {% endfor %}
-        </h3>
-
+        {% if error %}
+            <h3 class='text-center'>
+                Error: {{ error }}
+           </h3>
+        {% elif og_word %}
+            <h3 class='text-center'>
+                Word: {{ og_word }}
+                <br>
+                {% for w in steals %}
+                    {{ w }}
+                    </br>
+                {% endfor %}
+            </h3>
+        {% else %}
+            <form method="post" action="{% url 'home' %}">
+                <label for="word">Word to steal: </label>
+                <input id="word" type="text" name="word">
+                {% csrf_token %}
+                <input type="submit" value="Get steals">
+            </form>
+        {% endif %}
     </body>
 </html>
